package org.example.appointment.model;

public enum ConsultationType {IN_PERSON, REMOTE}

