@startuml Logical View - Domain Model (Microservices)
!theme plain
hide circle
skinparam linetype ortho

title Vista Lógica - Modelo de Domínio (Microserviços & CQRS)

package "Physician Context" {
    class Physician {
        + physicianNumber : String <<PK>>
        + name : String
        + specialty : String
        + contactInfo : String
    }
}

package "Patient Context" {
    class Patient {
        + patientNumber : String <<PK>>
        + name : String
        + phoneNumber : String
    }
}

package "Appointment Context" {
    class Appointment {
        + appointmentNumber : String <<PK>>
        + startTime : LocalDateTime
        + endTime : LocalDateTime
        + status : AppointmentStatus
        + type : ConsultationType
        --
        + physicianNumber : String <<FK>>
        + patientNumber : String <<FK>>
    }

    enum AppointmentStatus {
        SCHEDULED
        DONE
        CANCELLED
    }

    enum ConsultationType {
        IN_PERSON
        REMOTE
    }

    ' --- CQRS (Opcional, mas impressiona) ---
    class "ExternalPhysician" as ExtPhys <<Projection>> {
        + physicianNumber : String
        + name : String
    }

    class "ExternalPatient" as ExtPat <<Projection>> {
        + patientNumber : String
        + name : String
    }

    Appointment *-- AppointmentStatus
    Appointment *-- ConsultationType

    Appointment ..> ExtPhys : valida com
    Appointment ..> ExtPat : valida com
}

' Relações Fracas (Apenas por ID)
Physician -[hidden]down-> Appointment
Patient -[hidden]down-> Appointment


note "Sincronizado via RabbitMQ" as N2
Physician .. N2
N2 ..> ExtPhys

note "Sincronizado via RabbitMQ" as N1
Patient .. N1
N1 ..> ExtPat

@enduml